<resources>
    <string name="app_name">DominalteLight</string>

    <string name="main_tab_tiem_home_text">首页</string>
    <string name="main_tab_tiem_scenes_text">情景</string>
    <string name="main_tab_tiem_groups_text">分组</string>
    <string name="main_tab_tiem_bulbs_text">设备</string>

    <string name="next">下一步</string>
    <string name="finish">完成</string>
    <string name="cancel">取消</string>
    <string name="continue_">继续</string>
    <string name="enter">确定</string>
    <string name="retry">重试</string>
    <string name="edit">编辑</string>
    <string name="enter_1">好</string>
    <string name="delete">删除</string>
    <string name="send">发送</string>
    <string name="hallo">您好！</string>
    <string name="hint">提示</string>
    <string name="loading">loading...</string>
    <string name="operating">正在添加...</string>
    <string name="exit_tips">确定退出程序？</string>

    <string name="edit_nick">修改昵称</string>
    <string name="edit_password">修改密码</string>
    <string name="edit_about">关于我们</string>

    <string name="device">设备</string>
    <string name="add_new_device">添加设备</string>
    <string name="find_new_title">添加设备向导</string>
    <string name="find_new_tips1">请将您的设备接通电源，待成功后点击下一步继续</string>
    <string name="find_new_tips2">正在搜索设备</string>
    <string name="add_success_tips">设备添加成功</string>
    <string name="not_found_tips">没有找到任何设备</string>

    <string name="rename">重命名</string>
    <string name="rename_light_tips">为你的灯重命名，建议以实用的位置命名\n例如：水晶灯01、书桌台灯、卧室大灯1</string>
    <string name="device_name_empty_tips">请输入灯名称</string>
    <string name="device_name_had">已存在该灯</string>
    <string name="join_group">加入分组</string>
    <string name="delete_blub">删除灯</string>
    <string name="blub_delete_tips">确认要删除“/s”灯吗？</string>
    <string name="blub_deleting_tips">正在删除...</string>
    <string name="empty_devicelist">您还没有添加任何设备</string>

    <string name="group">分组</string>
    <string name="new_group_title">创建分组</string>
    <string name="add_new_group">添加分组</string>
    <string name="select_device">选择设备</string>
    <string name="new_group_tips">为你的分组取一个名字，建议以使用情况命名，例如：水晶灯、落地灯、卧室、厨房</string>
    <string name="new_group_name">分组名称</string>
    <string name="group_name_empty_tips">请输入分组名称</string>
    <string name="group_name_had">已存在该分组</string>
    <string name="devices_empty_tips">请选择设备</string>
    <string name="group_devices_tips">分组设备动作</string>
    <string name="manage_group_member">管理设备</string>
    <string name="delete_group">删除分组</string>
    <string name="group_delete_tips">确认要删除“%s”分组吗？</string>
    <string name="reanme_group_tips">为你的分组重命名，建议以灯具或者房间命名例如：水晶灯、落地灯、卧室、厨房</string>
    <string name="group_no_device">该分组内没有设备</string>

    <string name="scene">情景</string>
    <string name="new_scene_title">创建情景</string>
    <string name="add_new_scene">添加情景</string>
    <string name="scene_leave">离家</string>
    <string name="scene_gohome">回家</string>
    <string name="scene_rest">休息</string>
    <string name="scene_tv">看电视</string>
    <string name="name_scene_tips">为你的情景取一个名字，建议以使用情况命名，例如：吃饭、看书、</string>
    <string name="edit_name_scene_tips">情景名称</string>
    <string name="delete_scene">删除情景</string>
    <string name="scene_delete_tips">确认要删除“%s”情景吗？</string>
    <string name="scene_name_empty_tips">请输入情景名称</string>
    <string name="scene_name_had">已存在该情景</string>
    <string name="rename_scene_tips">为你的情景重命名，建议以使用情况命名，例如：吃饭、看书、</string>
    <string name="name_your_scene_tips">请输入情景名称</string>
    <string name="new_scene_devices_tips">选择设备动作</string>
    <string name="edit_scene_devices_tips">变更设备动作</string>
    <string name="scene_execute">情景已执行</string>
    <string name="offline_operation_tips">存在离线设备，部分操作不会成功</string>
    <string name="scene_no_device">该情景内没有设备</string>

    <string name="timer">定时任务</string>
    <string name="add_timer">添加定时任务</string>
    <string name="edit_timer">修改定时任务</string>
    <string name="execute_time">执行时间</string>
    <string name="timer_type_repeat">重复</string>
    <string name="timer_type_one">单次</string>
    <string name="timer_am">上午</string>
    <string name="timer_pm">下午</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="timer_all_day">每天</string>
    <string name="timer_once">不重复</string>
    <string name="timer_work_day">工作日</string>
    <string name="timer_weekend_day">周末</string>

    <string name="my_group">我的分组</string>
    <string name="my_device">我的设备</string>

    <string name="login">登录</string>
    <string name="login_account">登录账号</string>
    <string name="please_login_account">请登录账号</string>
    <string name="email">邮箱</string>
    <string name="email_address">邮箱地址</string>
    <string name="nickname">昵称</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="create_account">注册账号</string>
    <string name="login_skip">暂时跳过</string>
    <string name="login_back">返回登录</string>
    <string name="logout_account">退出登录</string>
    <string name="forget_password_tips">请输入您的注册邮箱，我们会将重设密码的链接发到您的邮箱中。</string>
    <string name="create_send_tips1">我们向</string>
    <string name="create_send_tips2">发送了一封确认邮件，请点击邮件中的链接以完成帐号激活。</string>
    <string name="not_received">没有收到？</string>
    <string name="not_received_tips1">1.请查看是否被归入垃圾箱</string>
    <string name="create_not_received_tips2">重发激活邮件</string>
    <string name="email_password_empty_tips">请输入邮箱和密码</string>
    <string name="email_empty_tips">邮箱不能为空，请重试</string>
    <string name="email_error_tips">邮箱格式错误，请重试</string>
    <string name="password_empty_tips">密码不能为空，请重试</string>
    <string name="user_not_exist">该邮箱未注册，请注册</string>
    <string name="email_or_password_error">邮箱或密码错误，请重新输入</string>
    <string name="network_error">网络连接失败，请检查网络是否正常</string>
    <string name="password_error">密码不正确</string>
    <string name="create_tips1">邮箱不能为空，请重试</string>
    <string name="create_tips2">昵称不能为空，请重试</string>
    <string name="nick_lenght_tips">昵称长度为2-12位</string>
    <string name="password_lenght_tips">请输入6-16位密码</string>
    <string name="password_error_tips">密码不正确</string>
    <string name="create_tips3">密码不能为空，请重试</string>
    <string name="user_had">邮箱已被注册，请登录</string>
    <string name="resend_create_email_tips">激活邮件已发送，请查收</string>
    <string name="forget_password_title">忘记密码</string>
    <string name="forget_password_email_tips">一封找回密码的邮件已发送到您的邮箱\n</string>
    <string name="resend_email">重发邮件</string>
    <string name="cur_password">当前密码</string>
    <string name="new_password">新密码</string>
    <string name="enter_password">确认密码</string>
    <string name="change_password_difference">两次输入的密码不一致，请重试</string>
    <string name="change_password_cur_error">原密码错误，请重试</string>
    <string name="login_state_error">登录状态异常，请重新登录</string>
    <string name="login_please">请先登录账号</string>
    <string name="name_length_error">用户名不能超过16位</string>
    <string name="logout_enter">您是否确定退出登录？</string>
    <string name="user_extrusion_tips">您的帐号已经在其它设备上登录。</string>
    <string name="account_not_vaild">您的帐号尚未激活，请查收您的邮箱并完成激活</string>
    <string name="account_vaild_send">%s\n如果没有收到，请检查是否被误归入垃圾箱中或者更换邮件地址重新注册。</string>
    <string name="send_success">邮件发送成功！</string>
    <string name="forget_account_not_vaild">您的账号尚未激活，请查收您的邮箱并完成激活</string>
    <string name="old_password_empty">原密码不能为空，请重试</string>
    <string name="new_password_empty">新密码不能为空，请重试</string>
    <string name="enter_password_empty">确认密码不能为空，请重试</string>
    <string name="password_more_error">密码错误次数超过上限\n请5分钟后再试</string>

    <string name="show_on_home_tips">显示到首页</string>
    <string name="rename_title">重命名</string>

    <string name="manage_home_scene">管理首页情景</string>
    <string name="manage_home_group">管理首页分组</string>
    <string name="manage_home_device">管理首页设备</string>

    <string name="updata">升级</string>
    <string name="updata_tips">升级提示</string>
    <string name="ota_title">固件升级</string>
    <string name="updata_now">马上升级</string>
    <string name="updataing">正在升级</string>
    <string name="ota_had_title">可以升级的灯</string>
    <string name="ota_had_tips">以下灯有新的固件版本，并可以立即开始升级。\n您可以选择某个灯进行单独升级，也可以进行批量升级。</string>
    <string name="ota_no_had_title">暂不能升级的灯</string>
    <string name="ota_no_had_tips">以下灯有新的固件版本，但因为设备断开了连接，因此暂不能升级。\n建议您重新尝试连接设备并对设备进行升级。</string>
    <string name="all_to_updata">批量升级</string>
    <string name="all_updata_tips">您的设备固件均为最新版本</string>
    <string name="updata_tips_1">是否需要立即进行升级？</string>
    <string name="updata_tips_2">升级过程中灯会自动关闭，并且暂时不能控制</string>
    <string name="updata_lights">个灯已经升级成功</string>
    <string name="updata_cancel">正在升级中，确认退出？</string>

    <string name="share_device">分享设备</string>
    <string name="share_control">分享控制</string>
    <string name="share">分享</string>
    <string name="share_my">分享</string>
    <string name="share_other">被分享</string>
    <string name="share_tips">请输入您要分享的账号</string>
    <string name="my_share_empty_tips">您还没将设备分享给其他人</string>
    <string name="other_share_empty_tips">您还没收到其他人分享的设备</string>
    <string name="share_to_error_tips_1">请输入正确的邮箱地址</string>
    <string name="share_account_error_tips">您要分享的账号是管理员账号</string>
    <string name="share_to_error_tips_2">帐号不存在，请检查是否拼写有误</string>
    <string name="share_to_error_tips_3">登录状态异常，请重新登录</string>
    <string name="share_to_success_tips_1">邀请已发送，等待成员处理</string>
    <string name="share_cancel">取消分享</string>
    <string name="share_state_accept1">已接受</string>
    <string name="share_state_accept">已邀请</string>
    <string name="share_state_cancel">已取消</string>
    <string name="share_state_deny">拒绝</string>
    <string name="share_state_pending">等待处理</string>
    <string name="home_share">共享的家</string>
    <string name="have_share_tips">%s已为你分享控制</string>

    <string name="blue_close_tips">请打开蓝牙，以确保APP能够连接到设备</string>
    <string name="open_now">现在打开</string>
    <string name="get_it">知道了</string>

    <string name="connect_device">正在连接设备...</string>
    <string name="connect_error_title">连接失败</string>
    <string name="connect_error_tips">请确保设备已通电，并处于有效连接距离内，是否重连？</string>
    <string name="is_reconnect">重连</string>

    <string name="login_only_can_input">qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM1234567890</string>
    <string name="register_name_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
</resources>
