<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/act_fgt_bg_gray"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <com.jeff.dominatelight.view.TitleBar
        android:id="@+id/act_edit_password_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_password_cur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/cur_password"
            style="@style/EditText.ChangePassword"/>

        <EditText
            android:id="@+id/edit_password_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/new_password"
            style="@style/EditText.ChangePassword"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color_dadada"/>

        <EditText
            android:id="@+id/edit_password_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            style="@style/EditText.ChangePassword"/>

    </LinearLayout>

</LinearLayout>